@@ -2,15 +2,15 @@
  * PlantUML : a free UML diagram generator
  * ========================================================================
  *
- * (C) Copyright 2009-2020, Arnaud Roques
+ * (C) Copyright 2009-2024, Arnaud Roques
  *
- * Project Info:  http://plantuml.com
- * 
+ * Project Info:  https://plantuml.com
+ *
  * If you like this project or if you find it useful, you can support us at:
- * 
- * http://plantuml.com/patreon (only 1$ per month!)
- * http://plantuml.com/paypal
- * 
+ *
+ * https://plantuml.com/patreon (only 1$ per month!)
+ * https://plantuml.com/paypal
+ *
  * This file is part of PlantUML.
  *
  * PlantUML is free software; you can redistribute it and/or modify it
@@ -30,7 +30,7 @@
  *
  *
  * Original Author:  Arnaud Roques
- * 
+ *
  *
  */
 package net.sourceforge.plantuml.project.time;
@@ -38,6 +38,7 @@ package net.sourceforge.plantuml.project.time;
 import net.sourceforge.plantuml.project.Value;
 
 public class Instant implements Comparable<Instant>, Value {
+    // ::remove folder when __HAXE__
 
 	private final long ms;
 
@@ -68,7 +69,7 @@ public class Instant implements Comparable<Instant>, Value {
 	}
 
 	private Long toLong() {
-		return new Long(ms);
+		return Long.valueOf(ms);
 	}
 
 	@Override
